--- a/css/main.scss
+++ b/css/main.scss
@@ -462,6 +462,10 @@ code {
   text-align: center;
 }
 
+#slide {
+  display:none;
+}
+
 /* media queries */
 /* ----------------------------------------------------------*/
 @media screen and (max-width: 750px) {
