--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,9 +10,9 @@
     {% if page.url == '/' %}
 
         <a target="_blank" href="https://plus.google.com/111862979601357461785" rel="publisher">
-            <img src="http://1.gravatar.com/avatar/7ddad1a9a1c8de452badaf82b6c30c76?s=60&d=&r=G">
+            <img src="https://1.gravatar.com/avatar/7ddad1a9a1c8de452badaf82b6c30c76?s=60&d=&r=G">
         </a>
-        <p>Sasha is web developer</p>
+        <p>Sanus|artificium</p>
 
     {% else %}
 
