--- a/css/main.css
+++ b/css/main.css
@@ -399,6 +399,9 @@ code {
 .center {
   text-align: center; }
 
+#slide {
+  display: none; }
+
 /* media queries */
 /* ----------------------------------------------------------*/
 @media screen and (max-width: 750px) { }
