FIX: inline analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,6 +25,8 @@
     <meta property="og:image" content="{{ site.baseurl }}/images/logo.png" />
     <!-- / Open graph data -->
 
+    <script>var _gas=_gas||[];_gas.push(["_setAccount","UA-17599340-1"]),_gas.push(["_setDomainName",".sanusart.com"]),_gas.push(["_trackPageview"]),_gas.push(["_gasTrackForms"]),_gas.push(["_gasTrackOutboundLinks"]),_gas.push(["_gasTrackMaxScroll"]),_gas.push(["_gasTrackDownloads"]),_gas.push(["_gasTrackYoutube",{force:!0}]),_gas.push(["_gasTrackVimeo",{force:!0}]),_gas.push(["_gasTrackMailto"]),function(){var e=document.createElement("script");e.type="text/javascript",e.async=!0,e.src="//cdnjs.cloudflare.com/ajax/libs/gas/1.10.1/gas.min.js";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)}();</script>
+
 </head>
 
 <!--[if lt IE 8]>
