--- a/css/main.scss
+++ b/css/main.scss
@@ -463,7 +463,7 @@ code {
 }
 
 #slide {
-  display:none;
+  display: none;
 }
 
 /* media queries */
@@ -510,6 +510,7 @@ code {
     height: 250px;
     margin: 0 auto 40px;
     display: block;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
   }
   .page--home content a span {
     font-size: 2rem;
@@ -530,7 +531,7 @@ code {
   #slide {
     position: fixed;
     overflow: auto;
-    display:block;
+    display: block;
     left: -200px;
     top: 0;
     width: 180px;
@@ -590,11 +591,11 @@ code {
 
   @include keyframes(down) {
     from {
-      top:-20px;
+      top: -20px;
       opacity: 1;
     }
     to {
-      top:20px;
+      top: 20px;
       opacity: 0;
     }
   }
