--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,7 @@
     <meta property="og:image" content="{{ site.baseurl }}/images/logo.png" />
     <!-- / Open graph data -->
 
-    <script>var _gas=_gas||[];_gas.push(["_setAccount","UA-17599340-1"]),_gas.push(["_setDomainName",".sanusart.com"]),_gas.push(["_trackPageview"]),_gas.push(["_gasTrackForms"]),_gas.push(["_gasTrackOutboundLinks"]),_gas.push(["_gasTrackMaxScroll"]),_gas.push(["_gasTrackDownloads"]),_gas.push(["_gasTrackYoutube",{force:!0}]),_gas.push(["_gasTrackVimeo",{force:!0}]),_gas.push(["_gasTrackMailto"]),function(){var e=document.createElement("script");e.type="text/javascript",e.async=!0,e.src="//cdnjs.cloudflare.com/ajax/libs/gas/1.10.1/gas.min.js";var t=document.getElementsByTagName("script")[0];t.parentNode.insertBefore(e,t)}();</script>
+    <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-17599340-1', 'auto');ga('send','pageview');</script>
 
 </head>
 
