--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,8 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/style.css">
 
+    <meta name="theme-color" content="#392443">
+
     <!-- Google webmaster tools -->
     <meta name="google-site-verification" content="t7AkgyFSXBSI2N-zw5keulhoL8nT-e23ifCihNlJZEU" />
     <!-- / Google analytics -->
