--- a/css/main.css
+++ b/css/main.css
@@ -439,8 +439,8 @@ code {
     overflow: auto;
     width: 100%; }
   utility {
-    margin: 1px 0 0 0px;
-    width: 90%; }
+    margin: 1px 0 0;
+    width: calc(100% - 40px); }
   aside {
     display: none; }
   nav a.burger {
