Update for correct year in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,2 @@
-<footer> <sa>sanus<span>art</span></sa> &copy; {{site.year}} Sasha Khamkov</footer>
+<footer> <sa>sanus<span>art</span></sa> &copy; {{ site.date | date: "%Y" }} Sasha Khamkov</footer>
 {% include off-canvas-slide.html %}
