--- a/css/main.scss
+++ b/css/main.scss
@@ -453,9 +453,15 @@ code {
 .hljs {
   display: inline;
   background: transparent !important;
-  &:hover {
-    background: #23241f !important;
-  }
+}
+
+.code-block {
+  border: 1px solid rgba(255,255,255,0.1);
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: 0px 2px 10px rgba(0,0,0,0.5) inset;
+  background: rgba(0,0,0,0.2);
+  display: inline-block;
 }
 
 .center {
