CONTENT(posts/pages): some small text modifications

--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,5 +1,9 @@
 <h1 class="home">Welcome</h1>
 
+<p>I am web developer, spare time musician ... My set of tools include CSS, html, PHP, angularJs and sometimes node and bash, guitars and computers are obvious.
+</p>
+<p></p>
+
 <a href="/projects/code/">
     <i class="fa fa-code"></i><span>Code</span>
 </a>
