--- a/css/main.scss
+++ b/css/main.scss
@@ -1,5 +1,6 @@
 /* Base */
 @import 'bourbon/bourbon';
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700);
 
 /* Mixins */
 @mixin category-cyrcles($width, $height) {
@@ -100,7 +101,7 @@ html, body {
 }
 
 body {
-  font-family: 'Exo', 'Trebuchet MS', Helvetica, Arial;
+  font-family: 'Open Sans', 'Exo', 'Trebuchet MS', Helvetica, Arial;
   font-size: 16px;
   line-height: 1.5;
   font-weight: 400;
@@ -280,7 +281,7 @@ content {
     background: $color-yellow;
     color: $color-purple;
     padding: 5px;
-    font-family: 'Exo', 'Trebuchet MS', Helvetica, Arial;
+    font-family: 'Exo', 'Open sans', 'Trebuchet MS', Helvetica, Arial;
     border: 1px solid $color-purple;
     &:hover {
       background: transparent;
@@ -294,7 +295,7 @@ content {
     height: 70px;
   }
   & h1, & h2, & h3 {
-    font-family: 'Exo', 'Trebuchet MS', Helvetica, Arial;
+    font-family: 'Open Sans', 'Exo', 'Trebuchet MS', Helvetica, Arial;
     color: $color-yellow;
     text-transform: capitalize;
     padding: 20px 0px;
@@ -328,7 +329,7 @@ content {
   }
   & p, & ul {
     padding: 0px 0px 16px 0px;
-    font-family: "trebuchet ms", Helvetica, Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans',"trebuchet ms", Helvetica, Arial, Helvetica, sans-serif;
   }
   & img {
     float: left;
@@ -456,11 +457,11 @@ code {
 }
 
 .code-block {
-  border: 1px solid rgba(255,255,255,0.1);
+  border: 1px solid rgba(255, 255, 255, 0.1);
   padding: 10px;
   border-radius: 5px;
-  box-shadow: 0px 2px 10px rgba(0,0,0,0.5) inset;
-  background: rgba(0,0,0,0.2);
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5) inset;
+  background: rgba(0, 0, 0, 0.2);
   display: inline-block;
 }
 
@@ -479,7 +480,7 @@ code {
 }
 
 @media screen and (max-width: 600px) {
-  html,body {
+  html, body {
     height: auto;
     overflow: auto;
     width: 100%;
@@ -504,6 +505,7 @@ code {
   content {
     margin: 1px 0 -70px 20px;
     width: 90%;
+    font-family: 'Open Sans','trebuchet ms',Helvetica,Arial,Helvetica,sans-serif;
     & h1 {
       line-height: 35px;
     }
@@ -516,7 +518,7 @@ code {
     height: 250px;
     margin: 0 auto 40px;
     display: block;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   }
   .page--home content a span {
     font-size: 2rem;
