--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -34,11 +34,22 @@
   box-shadow: 0px 0px 20px #222;
   background: rgba(255, 255, 255, .15);
   display: block;
+  overflow: auto;
   width: 100%;
   position: relative;
   font-size: 20px;
   color: $color-blue;
-  & date {
+  & cite {
+    text-align: left;
+    float: left;
+    position: relative;
+    font-size: 12px;
+    color: #ccc;
+  }
+  & img {
+    float: right;
+  }
+  & tags {
     right: 0;
     font-size: 12px;
     color: $font-color;
@@ -46,7 +57,7 @@
     border-bottom: 1px solid #777;
     position: absolute;
     border-left: 1px solid #777;
-    padding: 5px 10px;
+    padding: 0px 10px;
     background: rgba(255, 255, 255, 0.1);
     border-radius: 0px 0px 0px 10px;
   }
@@ -605,6 +616,13 @@ code {
     to {
       top: 20px;
       opacity: 0;
+    }
+  }
+
+  article a.post-list-item {
+    width: 93%;
+    & tags {
+      display: none;
     }
   }
 
