Update htaccess, add favicon

--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -11,6 +11,8 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/styles.css">
 
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}//favicon.ico">
+
     <meta name="theme-color" content="#392443">
 
     <!-- Google webmaster tools -->
