--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -11,7 +11,7 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/styles.css">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}//favicon.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/favicon.ico">
 
     <meta name="theme-color" content="#392443">
 
