--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -10,7 +10,7 @@
     {% if page.url == '/' %}
 
         <a target="_blank" href="https://plus.google.com/111862979601357461785" rel="publisher">
-            <img src="https://1.gravatar.com/avatar/7ddad1a9a1c8de452badaf82b6c30c76?s=60&d=&r=G">
+            <img src="https://1.gravatar.com/avatar/7ddad1a9a1c8de452badaf82b6c30c76?s=60&d=&r=G" width="60" height="60">
         </a>
         <p>Sanus|artificium</p>
 
