Fix "edit page on github" URL

--- a/src/_includes/side.html
+++ b/src/_includes/side.html
@@ -7,7 +7,7 @@
         {% assign file_to_edit = page.path %}
     {% endif %}
 <aside>
-    <a class="hint--right  hint--success  hint--rounded" data-hint="Contribute by editing/adding to this page on GitHub" target="_blank" href="https://github.com/sanusart/sanusart.com/edit/master/{{ underscore }}{{ file_to_edit }}"><i class="fa fa-pencil-square-o"></i></a>
+    <a class="hint--right  hint--success  hint--rounded" data-hint="Contribute by editing/adding to this page on GitHub" target="_blank" href="https://github.com/sanusart/sanusart.com/edit/master/src/{{ underscore }}{{ file_to_edit }}"><i class="fa fa-pencil-square-o"></i></a>
     <a class="hint--right  hint--success  hint--rounded" data-hint="GitHub page" target="_blank" href="https://github.com/sanusart"><i class="fa fa-github"></i></a>
     <a class="hint--right  hint--success  hint--rounded" data-hint="Follow @sanusart on Twitter" target="_blank" href="https://twitter.com/intent/follow?original_referer=https://sanusart.com&screen_name=sanusart&tw_p=followbutton"><i class="fa fa-twitter"></i></a>
     <a class="hint--right  hint--success  hint--rounded" data-hint="Facebook page" target="_blank" href="https://facebook.com/sanusart"><i class="fa fa-facebook-square"></i></a>
