--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,6 +1,17 @@
 /* Base */
 @import 'bourbon/bourbon';
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700);
+
+/* Fonts */
+@import url(https://fonts.googleapis.com/css?family=Exo:300,400,700,900);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700);
+
+@font-face {
+  font-family: 'spin_cycle';
+  src: url('../fonts/spincycle_ot-webfont.eot');
+  src: url('../fonts/spincycle_ot-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/spincycle_ot-webfont.woff') format('woff'), url('../fonts/spincycle_ot-webfont.ttf') format('truetype'), url('../fonts/spincycle_ot-webfont.svg#spin_cycle_otregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 
 /* Mixins */
 @mixin category-cyrcles($width, $height) {
@@ -73,18 +84,8 @@
     box-shadow: 0px 0px 20px #555;
     color: $color-yellow;
     @include transform(scale(1.03, 1.03));
+    @include linear-gradient(rgba(255,255,255,0.2),rgba(255,255,255,0));
   }
-}
-
-/* Fonts */
-@import url(//fonts.googleapis.com/css?family=Exo:300,400,700,900);
-
-@font-face {
-  font-family: 'spin_cycle';
-  src: url('../fonts/spincycle_ot-webfont.eot');
-  src: url('../fonts/spincycle_ot-webfont.eot?#iefix') format('embedded-opentype'), url('../fonts/spincycle_ot-webfont.woff') format('woff'), url('../fonts/spincycle_ot-webfont.ttf') format('truetype'), url('../fonts/spincycle_ot-webfont.svg#spin_cycle_otregular') format('svg');
-  font-weight: normal;
-  font-style: normal;
 }
 
 /* Palette */
