--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -9,6 +9,11 @@
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl }}">
 
+    <link href='https://fonts.googleapis.com/css?family=Gruppo' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Exo:100,300,400,700,900' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Fira+Sans:100,300,400,700,900' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
+
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/styles.css">
 
     <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/favicon.ico">
@@ -33,6 +38,6 @@
 
 </head>
 
-<!--[if lt IE 8]>
+<!--[if lt IE 9]>
 <p style="text-align: center;">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
 <![endif]-->
