--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -14,6 +14,9 @@
     <link href='https://fonts.googleapis.com/css?family=Fira+Sans:100,300,400,700,900' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
 
+    <script src="https://use.typekit.net/maa0pvv.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
+
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/css/styles.css">
 
     <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/favicon.ico">
