--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -10,10 +10,10 @@ $font-color: #fff;
 
 /* Vars */
 $side-padding-width: 120;
-$font-heading:'Gruppo', 'Exo', 'Trebuchet MS', Helvetica, Arial;
-$font-nav:'Gruppo', 'Exo', 'Trebuchet MS', Helvetica, Arial;
-$font-body: 'Fira Sans', 'Helvetica Neue', 'Trebuchet MS', Helvetica, Arial;
-$font-content: 'Fira Sans', 'Helvetica Neue', 'Trebuchet MS', Helvetica, Arial;
+$font-heading: 'museo', 'Gruppo', 'Exo', 'Trebuchet MS', Helvetica, Arial;
+$font-nav: 'museo', 'Gruppo', 'Exo', 'Trebuchet MS', Helvetica, Arial;
+$font-body: 'museo', 'Fira Sans', 'Helvetica Neue', 'Trebuchet MS', Helvetica, Arial;
+$font-content: 'museo', 'Fira Sans', 'Helvetica Neue', 'Trebuchet MS', Helvetica, Arial;
 
 @font-face {
   font-family: 'spin_cycle';
