--- a/src/_includes/head.html
+++ b/src/_includes/head.html
@@ -9,10 +9,10 @@
 
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl }}">
 
-    <link href='https://fonts.googleapis.com/css?family=Gruppo' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Exo:100,300,400,700,900' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Fira+Sans:100,300,400,700,900' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
+    <!--<link href='https://fonts.googleapis.com/css?family=Gruppo' rel='stylesheet' type='text/css'>-->
+    <!--<link href='https://fonts.googleapis.com/css?family=Exo:100,300,400,700,900' rel='stylesheet' type='text/css'>-->
+    <!--<link href='https://fonts.googleapis.com/css?family=Fira+Sans:100,300,400,700,900' rel='stylesheet' type='text/css'>-->
+    <!--<link href='https://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>-->
 
     <script src="https://use.typekit.net/maa0pvv.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
@@ -24,7 +24,7 @@
     <meta name="theme-color" content="#392443">
 
     <!-- Google webmaster tools -->
-    <meta name="google-site-verification" content="t7AkgyFSXBSI2N-zw5keulhoL8nT-e23ifCihNlJZEU" />
+    <!--<meta name="google-site-verification" content="t7AkgyFSXBSI2N-zw5keulhoL8nT-e23ifCihNlJZEU" />-->
     <!-- / Google analytics -->
 
     <!-- Open graph data -->
